# tabrel

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
data/: birthrate_usStates.csv
notebooks/: 01_basics.ipynb  03_art-data_gat_rmha.ipynb  04a_2d_SyntheticBenchmarks.ipynb  04a_multidimSyntheticBenchmarks.ipynb  04a_nw_mlp_fromScratch.ipynb  04b_syntheticRandomRbenchmark.ipynb  04c_syntheticDifferentTabrelArchs.ipynb  05_geo.ipynb  05_geo_usUnemployment.ipynb  05a_birds.ipynb  05a_geoLifeExpectancy.ipynb  05b_geoLifeExpectancy.ipynb  06_te.ipynb  art-data.ipynb  basic-graph.ipynb  basics.ipynb  geo.ipynb  geoLifeExpectancy.ipynb  minimal-example.ipynb  multidimSyntheticBenchmarks.ipynb  nw.ipynb  nw_mlp_fromScratch.ipynb  syntheticDifferentTabrelArchs.ipynb  syntheticRandomRbenchmark.ipynb  te.ipynb  te_investigation.ipynb  te_sr_learner.ipynb
scripts/: setup_environment.sh
src/tabrel/: dataset.py  model.py  optuna.py  sklearn_interface.py  train.py
src/tabrel/benchmark/: art_datasets.py  nw_regr.py
src/tabrel/utils/: config.py  geo.py  linalg.py  logging.py  misc.py  plot.py  treatment.py
test/: utils.py
test/integration/: test_classifier_training.py  test_sklearn_interface.py
test/unit/: test_config.py  test_dataset.py  test_linalg.py  test_logging.py  test_model.py  test_nw.py  test_trainer.py
